# DjangoCourseHW

./: README.md
DjangoCourseHW/: db.sqlite3  manage.py  pyproject.toml
DjangoCourseHW/DjangoCourseHW/: asgi.py  settings.py  urls.py  wsgi.py
DjangoCourseHW/lesson1/: urls.py  views.py
DjangoCourseHW/lesson2/: apps.py  urls.py  views.py
DjangoCourseHW/lesson3/: dfgdf.txt  file.txt  urls.py  util.py  views.py
DjangoCourseHW/lesson4/: models.py  urls.py  views.py
DjangoCourseHW/lesson4/fixtures/: categories.json  products.json  tags.json
DjangoCourseHW/lesson4/migrations/: 0001_initial.py  0002_category_slug_tag_slug_alter_category_description_and_more.py
DjangoCourseHW/lesson5/: README.md  forms.py  generate_token.py  models.py  urls.py  views.py
DjangoCourseHW/lesson5/migrations/: 0001_initial.py  0002_remove_user_name_alter_user_username.py  0003_feedback.py  0004_feedback_title_alter_feedback_image.py
DjangoCourseHW/lesson6/: models.py  urls.py  views.py
DjangoCourseHW/lesson6/fixtures/: data.json
DjangoCourseHW/lesson6/migrations/: 0001_initial.py
DjangoCourseHW/lesson7/: apps.py  urls.py  views.py
DjangoCourseHW/templates/lesson1/: index.html
DjangoCourseHW/templates/lesson3/: dune.html  existential.html  han.html  leia.html  luke.html  star_wars_main.html  tasks.html  template.html
DjangoCourseHW/templates/lesson5/: feedback_form.html  feedback_success.html  login.html  main.html  register.html
DjangoCourseHW/templates/lesson6/: album.html  albums_list.html  artist.html  artist_list.html  genre.html
DjangoDevCourse/: manage.py  (+1 more)
(+9 files in other folders)
